# minimal_logger

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
examples/: myapp.rs  myapp_logrotate  myapp_logrotate.ps1
src/: config.rs  lib.rs  log_file.rs  logger.rs  native.rs  tests.rs
tests/: config_from_env.rs
