[package]
name = "minimal_logger"
authors = ["Srikanth Anantharam <sria91@gmail.com>"]
version = "0.2.0"
edition = "2024"
description = "A minimal-resource, multi-platform logger for Rust applications."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sria91/minimal_logger"
documentation = "https://docs.rs/minimal_logger"
keywords = ["log", "logging", "embedded", "no-alloc", "minimal"]
categories = ["development-tools::debugging", "embedded"]

[dependencies]
log = { version = "0.4" }
arc-swap = "1.9"
time = { version = "0.3", features = ["formatting"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
] }
